# d-sam-client

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: splashscreen.html
public/workers/: dateWorker.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/css/: global.css
src/components/layouts/general-layout/: GeneralLayout.module.css  GeneralLayout.tsx
src/components/layouts/tools-layout/: ToolsLayout.tsx
src/components/layouts/workspace-layout/: WorkspaceLayout.tsx
src/components/structures/empty/: Empty.tsx
src/components/structures/sidebar/: Sidebar.module.css  Sidebar.tsx
src/components/structures/sidebar/guide/: Guide.tsx
src/components/structures/sidebar/sessions/: Sessions.tsx
src/components/structures/sidebar/settings/: Settings.tsx
src/components/structures/titlebar/: Titlebar.module.css  Titlebar.tsx
src/components/structures/titlebar/action-btn/: ActionsBtn.tsx  (+1 more)
src/hooks/useActions/: useActions.ts
src/plugins/db/: db.ts  types.d.ts
src/plugins/excel/: excel.ts  types.d.ts
src/routes/: index.tsx
src/store/: index.ts
src/store/current-data/: currentData.slice.ts  enums.ts  types.d.ts
src/store/current-page/: currentPage.slice.ts  types.d.ts
src/store/date-stack/: dateStack.slice.ts  types.d.ts
src/store/processes-state/: processesState.slice.ts  types.d.ts
src/utils/: downloadAsFile.ts  excelDateToJSDate.ts  validateExcelDate.ts
src/views/workspace-view/: WorkspaceView.tsx
(+33 files in other folders)
